--- a/Books.html
+++ b/Books.html
@@ -289,13 +289,10 @@
   <div class="subject-header">Hindi PW</div>          
   <div class="chapter-list">          
     <ul>          
-      <li><a href="https://drive.google.com/file/d/15mENE_n1TPTS4dpD7GzG01ifAzUECbhK/preview
+      <li><a href="https://drive.google.com/file/d/1t8ZMmddyZrkWE_Z0QqtVXXVpvXIi_1X2/preview
 " target="_blank">1. Vyakaran</a></li>          
-      <li><a href="https://drive.google.com/file/d/16AqxAJXBX5eL0XYZVRvM2lEmdChJ-XAD/preview
-" target="_blank">2. Kshitij + Kritika (all chapters)</a></li>          
-      <li><a href="https://drive.google.com/file/d/1mQb-QeOhpIk8D-5GenERMvYGgi2IT6cw/preview
-" target="_blank">3. Lekhan (vyakaran)</a></li>          
-           
+      <li><a href="https://drive.google.com/file/d/1mpHLYkBF1OUge73oO5-297QMb3q6Fe2U/preview
+" target="_blank">2. क्षितिज (पद्य)</a></li>         
     </ul>          
   </div>          
 </div>
