--- a/homework.html
+++ b/homework.html
@@ -105,14 +105,14 @@
 
   <div class="content">
     <div class="homework-box">
-      <h2>📝 Today's Homework 10-July-2025 </h2>
+      <h2>📝 Today's Homework 16-July-2025 </h2>
       <ul>
-        <li>English: Revise Narration.</li>
+        <li>English: Complete Narration.</li>
         <li>Hindi: Read Poem (Aatmkath).</li>
-        <li>Science: Make Notes/Read chapter.</li>
-        <li>Maths: Complete Copy.</li>
-        <li>Social Science: Complete Chapter 2.(history)</li>
-        <li>IT 402: Complete Unit II (session 1)</li>
+        <li>Physics: Complete Notes.</li>
+        <li>Maths: ------</li>
+        <li>Social Science: Complete Chapter 2.(geography)</li>
+        <li>Bio: Read chapter 1 </li>
       </ul>
       <a class="back-button" href="index.html">⬅️ Back to Home</a>
     </div>
