--- a/Notices.html
+++ b/Notices.html
@@ -144,10 +144,9 @@
 
   <div class="content">
     <div class="notice-box">
-      <h2>📢 Latest Class 10-F Notices</h2>
+      <h2>📢 Latest Notices</h2>
       <ul>
-        <li>🗓️ Classes are running continuously from 20 JUNE 2025 after the summer vacations.</li>
-        <li>🔔 School timing 7:30 a.m. - 12:40 p.m.</li>
+          <li>🔔 School timing 7:30 a.m. - 12:40 p.m.</li>
       </ul>
       
     </div>
@@ -156,7 +155,7 @@
     <div class="notice-box" style="margin-top: 30px;">
       <h2>📢 विशेष सूचना</h2>
       <ul>
-        <li> History copy will be check on Monday.</li>
+        <li> Complete Geography's Chapter 2.</li>
       </ul>
     </div>
 
