--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -351,12 +352,18 @@
       <p><strong>💬 Developer's WhatsApp:</strong> <a href="https://wa.me/919198426858" target="_blank" rel="noopener">Chat on WhatsApp</a></p>
       <p><strong>📧 Developer's Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
     </section>
-  </main>
 
-  <footer>
-    <a href="#top" class="scroll-top">🚀 Fly to Top</a>
-    <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
-  </footer>
+    <!-- 📱 Download App Button -->
+    <a href="https://drive.google.com/uc?export=download&id=19D8q4WFR5zji72fp4tuN6jgAaSBIlPgU" class="scroll-top" download style="display: block; text-align: center; width: fit-content; margin: 0 auto;">
+  📱 Download Class App <br>
+      (click on Download anyway)
+</a>
+    <br>
+    <footer>
+      <a href="#top" class="scroll-top">🚀 Fly to Top</a>
+      <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
+    </footer>
+  </main>
 
   <script>
     const sideNav = document.getElementById("sideNav");
