--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
     <a href="Books.html">📖 BOOKS</a>
     <a href="ncertsolution.html">💡 NCERT SOLUTIONS</a>
     <a href="pyqs.html">⏳ PYQs</a>
+    <a href="https://drive.google.com/uc?export=download&id=19D8q4WFR5zji72fp4tuN6jgAaSBIlPgU">📱 DOWNLOAD APP</a>
     <a href="#contact" onclick="closeNav()">☎ CONTACT US</a>
     <a href="#FeePayment" onclick="closeNav()">💸 FEE PAYMENT</a>
     <a href="#" onclick="shareWebsite()">📤 SHARE WEBSITE</a>
@@ -295,7 +296,7 @@
 
   <div class="notice-bar">
     <marquee behavior="scroll" direction="left" scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();">
-      🔔 Important Notice: PYQs section and NCERT SOLUTION section is added!!!! and please wait for hindi helpbook .....<br> Add This Site to your Homepage by clicking (Three dots).
+      🔔 Important Notice:  PYQs section and NCERT SOLUTION section is added!!!! and please wait for hindi helpbook .....<br>         DOWNLOAD the APP.
     </marquee>
   </div>
 
@@ -309,8 +310,10 @@
       <li><a href="Books.html" class="btn btn-books">📖 BOOKS</a></li>
       <li><a href="ncertsolution.html" class="btn btn-posts">💡 NCERT SOLUTIONS</a></li>
       <li><a href="pyqs.html" class="btn btn-posts">⏳ PYQs</a></li>
+      <li><a href="https://drive.google.com/uc?export=download&id=19D8q4WFR5zji72fp4tuN6jgAaSBIlPgU" class="btn btn-contact">📱 DOWNLOAD APP</a></li>
       <li><a href="#contact" class="btn btn-contact">☎ CONTACT US</a></li>
       <li><a href="#FeePayment" class="btn btn-fee">💸 FEE PAYMENT</a></li>
+      
     </ul>
   </nav>
 
