--- a/index.html
+++ b/index.html
@@ -81,14 +81,15 @@
     }
 
     .nav-buttons {
-      list-style: none;
-      padding: 10px;
-      margin: 20px auto 30px auto;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 12px 16px;
-      justify-content: center;
-    }
+  list-style: none;
+  padding: 0;
+  margin: 30px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
+  max-width: 700px;
+}
 
     .nav-buttons li {
       display: inline-block;
@@ -296,7 +297,7 @@
 
   <div class="notice-bar">
     <marquee behavior="scroll" direction="left" scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();">
-      🔔 Important Notice:  PYQs section and NCERT SOLUTION section is added!!!! and please wait for hindi helpbook .....<br>         DOWNLOAD the APP.
+      🔔 Important Notice: PYQs section and NCERT SOLUTION section is added!!!! and please wait for hindi helpbook .....<br>       (ii)  DOWNLOAD the APP.
     </marquee>
   </div>
 
