--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
   <div class="notice-bar">
     <marquee behavior="scroll" direction="left" scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();">
-      🔔 Important Notice: PYQs section and NCERT SOLUTION section is added!!!! and please wait for hindi helpbook .....<br>       (ii)  DOWNLOAD the APP.
+      🔔 Important Notice: PYQs section and NCERT SOLUTION section is added!!!! and please wait for hindi helpbook .....<br>        DOWNLOAD the APP.
     </marquee>
   </div>
 
