--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       background-color: #fff1cc;
       color: #222;
     }
-    /* Sidebar slide transition fix */
+ /* Sidebar slide transition fix */
     .side-nav {
       transition: width 0.4s ease;
     }
@@ -83,8 +83,8 @@
     }
 
     .btn {
-      min-width: 120px; /* reduced width from 140 */
-      padding: 10px 14px;
+      min-width: 140px;
+      padding: 10px 18px;
       border-radius: 8px;
       font-weight: 600;
       text-decoration: none;
@@ -299,21 +299,30 @@
     <div class="button-row">
       <a href="#" class="btn btn-home">🏠 HOME</a>
       <a href="post.html" class="btn btn-posts">✍ POSTS</a>
-      <a href="Notices.html" class="btn btn-notice">📢 NOTICE</a>
     </div>
 
     <!-- Row 2 -->
     <div class="button-row">
+      <a href="Notices.html" class="btn btn-notice">📢 NOTICE</a>
       <a href="homework.html" class="btn btn-homework">📚 HOMEWORK</a>
+    </div>
+
+    <!-- Row 3 -->
+    <div class="button-row">
       <a href="Books.html" class="btn btn-books">📖 BOOKS</a>
       <a href="ncertsolution.html" class="btn btn-ncert">💡 NCERT SOLUTIONS</a>
     </div>
 
-    <!-- Row 3 -->
-    <div class="button-row" style="justify-content: center;">
+    <!-- Row 4 -->
+    <div class="button-row">
       <a href="#FeePayment" class="btn btn-fee">💸 FEE PAYMENT</a>
       <a href="#contact" class="btn btn-contact">☎ CONTACT US</a>
+    </div>
+
+    <!-- Row 5 -->
+    <div class="button-row">
       <a href="https://drive.google.com/uc?export=download&id=19D8q4WFR5zji72fp4tuN6jgAaSBIlPgU" class="btn btn-download">📱 DOWNLOAD APP</a>
+      <a href="https://drive.google.com/file/d/14p80M0_mtte4Xfa_rCgKruxyV8wbwS7c/preview" target="_blank" class="btn btn-students">👨‍🎓 STUDENT LIST</a>
     </div>
 
     <!-- Last row: only PYQs centered -->
@@ -321,8 +330,7 @@
       <a href="pyqs.html" class="btn btn-pyqs">⏳ PYQs</a>
     </div>
   </nav>
-
-  <main>
+ <main>
     <div class="main-box">
       <section id="StudentsList">
         <h2>📄 STUDENT LIST</h2>
@@ -363,9 +371,9 @@
 
     <!-- 📱 Download App Button -->
     <a href="https://drive.google.com/uc?export=download&id=19D8q4WFR5zji72fp4tuN6jgAaSBIlPgU" class="scroll-top" download style="display: block; text-align: center; width: fit-content; margin: 0 auto;">
-  📱 Download Class App <br>
+      📱 Download Class App <br>
       (click on Download anyway)
-</a>
+    </a>
     <br>
     <footer>
       <a href="#top" class="scroll-top">🚀 Fly to Top</a>
