--- a/Notices.html
+++ b/Notices.html
@@ -155,7 +155,10 @@
     <div class="notice-box" style="margin-top: 30px;">
       <h2>📢 विशेष सूचना</h2>
       <ul>
-        <li> Complete Geography's Chapter 2.</li>
+        <li>
+सभी भैयाओ को सूचित किया जाता है कि कल दिनांक 18/07/2025 से आगमन समय मे परिवर्तन किया गया है ।। आप सभी की उपस्थिति 9:15 पर होगी ।।
+अतः परिवर्तित समय को ध्यान मे रखकर विद्यालय आयेगे।।
+प्रधानाचार्य.</li>
       </ul>
     </div>
 
