--- a/index.html
+++ b/index.html
@@ -290,8 +290,7 @@
     <marquee behavior="scroll" direction="left" scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();">
       🔔 आवश्यक सूचना:-
 सभी भैयाओ को सूचित किया जाता है कि कल दिनांक 18/07/2025 से आगमन समय मे परिवर्तन किया गया है ।। आप सभी की उपस्थिति 9:15 पर होगी ।।
-अतः परिवर्तित समय को ध्यान मे रखकर विद्यालय आयेगे।।
-प्रधानाचार्य<br> .....DOWNLOAD the APP.
+अतः परिवर्तित समय को ध्यान मे रखकर विद्यालय आयेंगे।।<br> .....DOWNLOAD the APP.
     </marquee>
   </div>
 
