--- a/Notices.html
+++ b/Notices.html
@@ -157,8 +157,7 @@
       <ul>
         <li>
 सभी भैयाओ को सूचित किया जाता है कि कल दिनांक 18/07/2025 से आगमन समय मे परिवर्तन किया गया है ।। आप सभी की उपस्थिति 9:15 पर होगी ।।
-अतः परिवर्तित समय को ध्यान मे रखकर विद्यालय आयेगे।।
-प्रधानाचार्य.</li>
+अतः परिवर्तित समय को ध्यान मे रखकर विद्यालय आयेंगे।।</li>
       </ul>
     </div>
 
