--- a/homework.html
+++ b/homework.html
@@ -105,14 +105,14 @@
 
   <div class="content">
     <div class="homework-box">
-      <h2>📝 Today's Homework 16-July-2025 </h2>
+      <h2>📝 Today's Homework 17-July-2025 </h2>
       <ul>
         <li>English: Complete Narration.</li>
-        <li>Hindi: Read Poem (Aatmkath).</li>
+        <li>Hindi: Complete Poem (Aatmkath).</li>
         <li>Physics: Complete Notes.</li>
-        <li>Maths: ------</li>
+        <li>Maths: Complete Exe- 5.3 question no. 2</li>
         <li>Social Science: Complete Chapter 2.(geography)</li>
-        <li>Bio: Read chapter 1 </li>
+        <li>IT 402: Complete Copy</li>
       </ul>
       <a class="back-button" href="index.html">⬅️ Back to Home</a>
     </div>
