--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
   <div class="notice-bar">
     <marquee behavior="scroll" direction="left" scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();">
       🔔 आवश्यक सूचना:-
-सभी भैयाओ को सूचित किया जाता है कि कल दिनांक 18/07/2025 से आगमन समय मे परिवर्तन किया गया है ।। आप सभी की उपस्थिति 9:15 पर होगी ।।
+सभी भैयाओ को सूचित किया जाता है कि दिनांक 18/07/2025 से आगमन समय मे परिवर्तन किया गया है ।। आप सभी की उपस्थिति 9:15 पर होगी ।।
 अतः परिवर्तित समय को ध्यान मे रखकर विद्यालय आयेंगे।।<br> .....DOWNLOAD the APP.
     </marquee>
   </div>
@@ -359,6 +359,7 @@
       <p><strong>👨‍🏫 Class Teacher's Phone:</strong> <a href="tel:+919451478144">+91 94514 78144</a></p>
       <p><strong>💬 Developer's WhatsApp:</strong> <a href="https://wa.me/919198426858" target="_blank" rel="noopener">Chat on WhatsApp</a></p>
       <p><strong>📧 Developer's Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
+      <p><strong>🗨️ For Any Help:</strong> <a href="https://wa.me/+91 74084 98558" target="_blank" rel="noopener">VIVEK SINGH (whatsapp)</a></p>
     </section>
 
     <a href="https://drive.google.com/uc?export=download&id=19D8q4WFR5zji72fp4tuN6jgAaSBIlPgU" class="scroll-top" download style="display: block; text-align: center; width: fit-content; margin: 0 auto;">
@@ -427,4 +428,5 @@
 </body>
 </html>
 
-  
+
+                                   
