--- a/index.html
+++ b/index.html
@@ -356,14 +356,14 @@
     <section id="contact">
       <h2>📞 CONTACT US</h2>
       <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>
-      <p><strong>👨‍🏫 Class Teacher's Phone:</strong> <a href="tel:+919451478144">+91 94514 78144</a></p>
+      <p><strong>👨‍🏫 Class Teacher's Phone:</strong> <a href="tel:+919451478144"><br>+91 94514 78144</a></p>
       <p><strong>💬 Developer's WhatsApp:</strong>
   <a href="https://wa.me/919198426858?text=Hii!%20I%20visited%20your%20site%20from%20the%20SSSVM%20Class%2010th%20F%20website/app." target="_blank" rel="noopener">
-    Chat on WhatsApp
+    <br>Chat on WhatsApp
   </a>
       </p>
-      <p><strong>📧 Developer's Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
-      <p><strong>🗨️ For Any Help:</strong> <a href="https://wa.me/+91 74084 98558" target="_blank" rel="noopener">VIVEK SINGH (whatsapp)</a></p>
+      <p><strong>📧 Developer's Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com"><br>priyanshusingh0606@gmail.com</a></p>
+      <p><strong>🗨️ For Any Help:</strong> <a href="https://wa.me/+91 74084 98558" target="_blank" rel="noopener"> <br>VIVEK SINGH (whatsapp)</a></p>
     </section>
 
     <a href="https://drive.google.com/uc?export=download&id=19D8q4WFR5zji72fp4tuN6jgAaSBIlPgU" class="scroll-top" download style="display: block; text-align: center; width: fit-content; margin: 0 auto;">
