--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
   </p>
 
   <p><strong>📧 Developer's Email:</strong> 
-    <a href="mailto:priyanshusingh0606@gmail.com">
+    <a href="https://mailto:priyanshusingh0606@gmail.com">
       <br>priyanshusingh0606@gmail.com
     </a>
   </p>
