--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
   </p>
 
   <p><strong>💬 Developer's WhatsApp:</strong>
-    <a href="https://wa.me/919198426858?text=Hii!%20I%20visited%20your%20site%20from%20the%20SSSVM%20Class%2010th%20F%20website/app." 
+    <a href="https://wa.me/9198426858" 
        target="_blank" 
        rel="noopener">
       <br>Chat on WhatsApp
