--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
   </p>
 
   <p><strong>💬 Developer's WhatsApp:</strong>
-    <a href="https://wa.me/9198426858" 
+    <a href="https://wa.me/9198426858?text=Hii!%2C%20I%20visited%20your%20site%20the%20SSSVM%20Class%2010th%20F%20Website" 
        target="_blank" 
        rel="noopener">
       <br>Chat on WhatsApp
@@ -371,7 +371,7 @@
   </p>
 
   <p><strong>📧 Developer's Email:</strong> 
-    <a href="https://mailto:priyanshusingh0606@gmail.com">
+    <a href="mailto:priyanshusingh0606@gmail.com">
       <br>priyanshusingh0606@gmail.com
     </a>
   </p>
@@ -383,6 +383,7 @@
       <br>VIVEK SINGH (WhatsApp)
     </a>
   </p>
+     <p> <a class="glow-button" href="https://sssvmclass10thf.github.io/ssvmclass10thf/">📥 WEBSITE (to use "CONTACT US" function you must go to the website) </a> </p>
 </section>
 
 
