--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     <a href="https://wa.me/9198426858?text=Hii!%2C%20I%20visited%20your%20site%20the%20SSSVM%20Class%2010th%20F%20Website" 
        target="_blank" 
        rel="noopener">
-      <br>Chat on WhatsApp
+      <br>Chat on WhatsApp +91 9198426858
     </a>
   </p>
 
@@ -380,10 +380,10 @@
     <a href="https://wa.me/917408498558?text=Hello%2C%20I%20need%20help%20regarding%20the%20SSSVM%20Class%2010th%20F%20Website%2FApp" 
        target="_blank" 
        rel="noopener">
-      <br>VIVEK SINGH (WhatsApp)
+      <br>VIVEK SINGH (WhatsApp) +91 7408498558
     </a>
   </p>
-     <p> <a class="glow-button" href="https://sssvmclass10thf.github.io/ssvmclass10thf/">📥 WEBSITE (to use "CONTACT US" function you must go to the website) </a> </p>
+     <p> <a class="glow-button" href="#"> (to use "CONTACT US" function you must go to the website) <br> website link :- https://sssvmclass10thf.github.io/ssvmclass10thf/ </a> </p>
 </section>
 
 
