--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     <a href="https://wa.me/917408498558?text=Hello%2C%20I%20need%20help%20regarding%20the%20SSSVM%20Class%2010th%20F%20Website%2FApp" 
        target="_blank" 
        rel="noopener">
-      <br>VIVEK SINGH (WhatsApp) +91 7408498558
+      <br>WhatsApp +91 7408498558
     </a>
   </p>
 
@@ -412,7 +412,7 @@
 
 
     <a href="https://drive.google.com/uc?export=download&id=19D8q4WFR5zji72fp4tuN6jgAaSBIlPgU" class="scroll-top" download style="display: block; text-align: center; width: fit-content; margin: 0 auto;">
-      📱 Download Class App <br>
+      📱 Download Class App {both apps are non-verified but trust on developer 😊}<br>
       (click on Download anyway)
     </a>
     <br>
@@ -425,7 +425,7 @@
     <br>
     <footer>
       <a href="#top" class="scroll-top">🚀 Fly to Top</a>
-      <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
+      <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love <br> ~Priyanshu Singh</p>
     </footer>
   </main>
 
