--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 
 
     <a href="https://drive.google.com/uc?export=download&id=19D8q4WFR5zji72fp4tuN6jgAaSBIlPgU" class="scroll-top" download style="display: block; text-align: center; width: fit-content; margin: 0 auto;">
-      📱 Download Class App {both apps are non-verified but trust on developer 😊}<br>
+      📱 Download Class App {click me}<br>
       (click on Download anyway)
     </a>
     <br>
