--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
     <a href="Books.html">📖 BOOKS</a>
     <a href="ncertsolution.html">💡 NCERT SOLUTIONS</a>
     <a href="pyqs.html">⏳ PYQs</a>
+    <a href="mindmaps.html" class="btn btn-pyqs">🧠 MINDMAPS</a>
     <a href="https://drive.google.com/uc?export=download&id=19D8q4WFR5zji72fp4tuN6jgAaSBIlPgU">📱 DOWNLOAD APP</a>
     <a href="#contact" onclick="closeNav()">☎ CONTACT US</a>
     <a href="#FeePayment" onclick="closeNav()">💸 FEE PAYMENT</a>
