--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       </div>
       <div class="button-row" style="justify-content: center;">
         <a href="pyqs.html" class="btn btn-pyqs">⏳ PYQs</a>
-        <a href="mindmaps.html" class="btn btn-pyqs">🧠 MINDMAPS</a>
+        <a href="mindmaps.html" class="btn btn-books">🧠 MINDMAPS</a>
       </div>
     </div>
   </nav>
