--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <a href="Books.html">📖 BOOKS</a>
     <a href="ncertsolution.html">💡 NCERT SOLUTIONS</a>
     <a href="pyqs.html">⏳ PYQs</a>
-    <a href="mindmaps.html" class="btn btn-pyqs">🧠 MINDMAPS</a>
+    <a href="mindmaps.html">🧠 MINDMAPS</a>
     <a href="https://drive.google.com/uc?export=download&id=19D8q4WFR5zji72fp4tuN6jgAaSBIlPgU">📱 DOWNLOAD APP</a>
     <a href="#contact" onclick="closeNav()">☎ CONTACT US</a>
     <a href="#FeePayment" onclick="closeNav()">💸 FEE PAYMENT</a>
@@ -309,7 +309,7 @@
     <marquee behavior="scroll" direction="left" scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();">
       🔔 आवश्यक सूचना:-
 सभी भैयाओ को सूचित किया जाता है कि दिनांक 18/07/2025 से आगमन समय मे परिवर्तन किया गया है ।। आप सभी की उपस्थिति 9:15 पर होगी ।।
-अतः परिवर्तित समय को ध्यान मे रखकर विद्यालय आयेंगे।।<br> .....DOWNLOAD the APP.
+अतः परिवर्तित समय को ध्यान मे रखकर विद्यालय आयेंगे।।<br> 'MINDMAPS' Section Added .....DOWNLOAD the APP.
     </marquee>
   </div>
 
