--- a/Books.html
+++ b/Books.html
@@ -285,7 +285,25 @@
   </div>    
   </div>   
   <!-- English First Flight -->          
-<!-- Add this full block inside the same <div class="content"> just like others -->  <div class="subject">          
+  <div class="subject">          
+  <div class="subject-header">First Flight Helpbook</div>          
+  <div class="chapter-list">          
+    <ul>          
+      <li><a href="https://drive.google.com/file/d/1kYMpL0FT343e2YV26sMwE7eWia2zX0te/preview">1. Part 1</a></li>          
+      <li><a href="https://drive.google.com/file/d/1HZwcGuTLO1RFerNuXMmvAktMa0yktr3X/preview">2. Part 2</a></li>
+      </ul>          
+  </div>    
+  </div>   
+   <!-- English First Flight -->          
+  <div class="subject">          
+  <div class="subject-header">Hindi Kshitij Helpbook</div>          
+  <div class="chapter-list">          
+    <ul>          
+      <li><a href="https://drive.google.com/file/d/1j75wuVF0S4xOYc-jFyg3ZZ7xT76R5hg7/preview">1. Part 1</a></li>          
+      <li><a href="https://drive.google.com/file/d/13_c8qh_ASufZuPEI4EShBsDPMa71c2tO/preview">2. Part 2</a></li>
+      </ul>          
+  </div>    
+  </div>   
   <div class="subject-header">Hindi PW</div>          
   <div class="chapter-list">          
     <ul>          
