--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
       background-color: #fff1cc;
       color: #222;
     }
-    .side-nav {
-      transition: width 0.4s ease;
+.side-nav {
+  height: auto;
+  max-height: 90vh; /* Optional: prevent it from growing too large */
+  width: 0;
+  ...
+
     }
     @keyframes fadeInCenter {
       0% { opacity: 0; transform: translate(-50%, -60%); }
