--- a/mindmaps.html
+++ b/mindmaps.html
@@ -3,45 +3,58 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mindmap | Subjects</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <title>Mindmaps | All Subjects</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Inter', sans-serif;
-      background-color: #f4f4f4;
+      font-family: 'Poppins', sans-serif;
+      background-color: #fefae0;
       color: #333;
     }
 
     header, footer {
-      padding: 20px 40px;
-      background-color: #355C7D;
-      color: #fff;
+      padding: 40px 20px;
+      background: linear-gradient(90deg, #3d405b, #81b29a);
+      color: white;
       text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
 
-    .mindmap-container {
+    header h1 {
+      margin: 0;
+      font-size: 36px;
+    }
+
+    .container {
       max-width: 1000px;
       margin: auto;
       padding: 40px 20px;
     }
 
-    .toggle-btn {
-      width: 100%;
-      background: linear-gradient(135deg, #7f5af0, #2cb67d);
-      color: #fff5Ee;
-      border: none;
-      padding: 16px;
-      font-size: 1.2rem;
-      font-weight: 600;
-      border-radius: 12px;
-      cursor: pointer;
-      margin: 16px 0;
-      transition: background 0.3s ease;
+   .toggle-btn {
+  width: 80%;
+  max-width: 400px; /* Optional: to prevent full screen stretch */
+  display: block;
+  margin: 20px auto; /* ✅ This will center it horizontally */
+  background: linear-gradient(135deg, #457b9d, #a8dadc);
+  color: white;
+  border: none;
+  padding: 16px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  border-radius: 12px;
+  cursor: pointer;
+  box-shadow: 0 0 12px rgba(69, 123, 157, 0.6);
+  transition: 0.3s ease-in-out;
+  text-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+}
+
     }
 
     .toggle-btn:hover {
-      background: linear-gradient(135deg, #693fd3, #249865);
+      transform: scale(1.05);
+      box-shadow: 0 0 24px rgba(69, 123, 157, 1);
     }
 
     .subject-content {
@@ -51,18 +64,19 @@
     }
 
     .category-block {
-      background: #D0F0C0;
-      border-left: 6px solid #2cb67d;
-      padding: 16px 24px;
+      background: #f0efeb;
+      border-left: 6px solid #3d405b;
+      padding: 20px 24px;
       margin: 20px 0;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      border-radius: 20px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.08);
     }
 
     .category-title {
       font-weight: 600;
       margin-bottom: 10px;
-      color: #444;
+      font-size: 18px;
+      color: #3d405b;
     }
 
     ul.chapter-list {
@@ -72,13 +86,13 @@
     }
 
     .chapter-list a {
-      color: #2d7ff9;
+      color: #3d405b;
       text-decoration: none;
       transition: color 0.2s ease;
     }
 
     .chapter-list a:hover {
-      color: #1c56d3;
+      color: #2f3a53;
       text-decoration: underline;
     }
 
@@ -90,17 +104,19 @@
     .back-home-btn {
       display: inline-block;
       margin-top: 10px;
-      padding: 10px 20px;
-      background-color: #2cb67d;
+      padding: 12px 24px;
+      background-color: #81b29a;
       color: white;
       border-radius: 8px;
       text-decoration: none;
       font-weight: 600;
-      transition: background-color 0.3s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 0 10px #81b29a;
     }
 
     .back-home-btn:hover {
-      background-color: #249865;
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #81b29a;
     }
   </style>
 </head>
@@ -109,7 +125,7 @@
     <h1>MINDMAPS</h1>
   </header>
 
-  <div class="mindmap-container">
+ <div class="mindmap-container">
 
     <!-- SST -->
     <button class="toggle-btn" onclick="toggleContent('sst')">SST</button>
@@ -219,9 +235,8 @@
       </div>
     </div>
   </div>
-
   <footer>
-    <p>&copy; 2025 SSSVM <br> <span style="font-size: 0.8em;">~Priyanshu Singh</span></p>
+    <p>&copy; 2025 SSSVM <br><span style="font-size: 0.8em;">~Priyanshu Singh</span></p>
     <a href="index.html" class="back-home-btn">⬅ Back to Home</a>
   </footer>
 
