--- a/mindmaps.html
+++ b/mindmaps.html
@@ -19,6 +19,7 @@
       color: white;
       text-align: center;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      flex: 1;
     }
 
     header h1 {
